# gubsy

./: .gitignore  CMakeLists.txt  CMakePresets.json  Cargo.toml  README copy.md  README.md  imgui.ini  misc_move_configs.sh
binds/: Default.ini
config/: audio.ini  input.ini
config_old/: input_active_profile.txt  menu_layouts.ini  menu_nav.ini  menu_objects.ini  ui_screens.csv
config_old/input_profiles/: DefaultCopy.ini
data/: mods_enabled.lisp
data/binds_profiles/: default.lisp  default.sxp
data/player_profiles/: user_profiles.lisp
data/settings_profiles/: audio.lisp  game_settings.lisp  input_settings_profiles.lisp  top_level_game_settings.lisp
data/ui_layouts/: layouts.lisp  layouts.sxp
docs/: PROFILES_GUIDE.md  agent_guide.txt  assets_we_need.txt  binds_menu.md  clean_lua_split.txt  completing_mods.md  demo_defs.md  dev_setup.md  done.txt  engine_roadmap.md  entity_ai_hooks.md  gui_editor_plan.md  imgui_debug_plan.md  input_menu_unification.md  input_system_plan.md  lobby_implementation.md  lua_modding_refactor.md  mechanics.md  menu.md  menu_implementation.txt  menu_reference.md  menu_system_plan.md  menu_system_plan2.md  mod_api_system.md  modifiers.md  mods_roadmap.md  per_entity_interface.md  revisit_binds.md  session_lobby.md  settings_menu_plan.md  settings_schema_plan.md  stages_and_decorations.md  stats_and_triggers.md  steam.txt  step_refactor.txt  tech_overview.md  ticking.md  todo_high_level.md  todo_low_level.md  ui_layout_editor_plan.md  (+3 more)
imgui/: imconfig.h
mod_repo/mods/base/: info.toml  manifest.json
mod_repo/mods/base/scripts/: demo.lua  (+2 more)
mod_repo/mods/bonus_pack/: manifest.json
mod_repo/mods/legacy_pack/: README.txt  manifest.json
mod_repo/mods/pad_tweaks/: manifest.json
mod_repo/mods/patch_core/: manifest.json
mod_repo/mods/shuffle_pack/: manifest.json
mod_repo/mods/super_suite/: manifest.json
mods/base/: manifest.json
mods/base/scripts/: demo_items.lua
mods/bonus_pack/: manifest.json
mods/pad_tweaks/scripts/: demo_items.lua
mods/patch_core/scripts/: demo_items.lua
mods/shuffle_pack/: manifest.json
mods/super_suite/: manifest.json
old_ui/menu/: menu_layout.hpp  menu_mods.cpp  menu_step.cpp
plans/: _guide.plan
plans/gibson/: 2025_12_10.plan
scripts/: run.sh  setup_debian.sh
sol/: config.hpp  sol.hpp
src/: alerts.cpp  audio.cpp  camera.cpp  camera.hpp  config.cpp  config.hpp  crates.cpp  crates.hpp  demo_content.cpp  demo_content.hpp  demo_items.cpp  demo_items.hpp  entities.cpp  entities.hpp  entity.hpp  game_modes.cpp  game_modes.hpp  globals.cpp  globals.hpp  graphics.cpp  guns.hpp  input.cpp  input.hpp  input_debounce.cpp  inventory.hpp  items.hpp  luamgr.hpp  luamgr_query.cpp  main.cpp  modes.hpp  mods.cpp  mods.hpp  mods_helpers.cpp  particles.hpp  pickups.hpp  pickups_inventory.cpp  pickups_inventory.hpp  player_combat.cpp  player_combat.hpp  player_movement.cpp  (+24 more)
src/engine/: alerts.cpp  alerts.hpp  audio.cpp  audio.hpp  audio_settings.cpp  audio_settings.hpp  binds_profiles.cpp  binds_profiles.hpp  binds_ui_helpers.cpp  binds_ui_helpers.hpp  config.cpp  config.hpp  data.cpp  data.hpp  device_settings.hpp  device_state.hpp  engine_state.cpp  engine_state.hpp  events.hpp  game_settings.cpp  game_settings.hpp  globals.cpp  globals.hpp  graphics.cpp  graphics.hpp  imgui_layer.cpp  imgui_layer.hpp  init.cpp  input.cpp  input.hpp  input_binding_utils.cpp  input_binding_utils.hpp  input_defs.hpp  input_events.hpp  input_queries.cpp  input_queries.hpp  input_settings_profiles.cpp  input_settings_profiles.hpp  input_sources.cpp  input_sources.hpp  (+45 more)
src/engine/imgui_debug/: binds_window.cpp  imgui_debug.cpp  imgui_debug.hpp  layouts_window.cpp  players_window.cpp  video_window.cpp  windows.hpp
src/engine/input/: input.cpp  input.hpp  input_profiles.hpp  input_queries.hpp
src/engine/layout_editor/: layout_editor.cpp  layout_editor.hpp  layout_editor_history.cpp  layout_editor_history.hpp  layout_editor_hooks.hpp  layout_editor_interaction.cpp  layout_editor_interaction.hpp  layout_editor_internal.hpp  layout_editor_overlay.cpp  layout_editor_overlay.hpp  layout_editor_panel.cpp  layout_editor_panel.hpp
src/engine/menu/: menu_commands.cpp  menu_commands.hpp  menu_ids.hpp  menu_manager.cpp  menu_manager.hpp  menu_render.cpp  menu_render.hpp  menu_screen.hpp  menu_system.cpp  menu_system.hpp  menu_system_render.cpp  menu_system_state.cpp  menu_system_state.hpp  menu_system_update.cpp  menu_types.hpp  settings_category_registry.hpp
src/game/: actions.hpp  binds_schema_registry.cpp  binds_schema_registry.hpp  demo_content.cpp  demo_items.cpp  demo_items.hpp  events.hpp  input_frame.cpp  input_frame.hpp  main.cpp  modes.hpp  playing.cpp  playing.hpp  settings_schema_registry.cpp  settings_schema_registry.hpp  setup.cpp  setup.hpp  state.cpp  state.hpp  title.cpp  title.hpp  ui_layout_ids.hpp  ui_layout_registry.cpp  ui_layout_registry.hpp
src/game/menu/: lobby_state.cpp  lobby_state.hpp  menu_ids.hpp
src/game/mod_api/: demo_content_api.cpp  demo_content_api.hpp  demo_content_internal.hpp  demo_items_api.cpp  demo_items_api.hpp  demo_items_internal.hpp  register_game_mod_apis.cpp  register_game_mod_apis.hpp
src/lua/: bindings.hpp  internal_state.hpp  lua_defs.hpp  lua_helpers.cpp  lua_helpers.hpp  runtime.cpp  version.hpp
src/lua/api/: player.cpp  world.cpp
src/lua/hooks/: ammo.cpp  crates.cpp  entities.cpp  global.cpp  guns.cpp  items.cpp  projectiles.cpp
src/lua/registry/: ammo.cpp  crates.cpp  entities.cpp  guns.cpp  items.cpp  projectiles.cpp
src/main_menu/: menu.hpp  menu_binds.cpp  menu_buttons.cpp  menu_internal.hpp  menu_layout.cpp  menu_lobby.cpp  menu_mods.cpp  menu_navgraph.cpp  menu_objects.cpp  menu_objects.hpp  menu_render.cpp  menu_step.cpp
src/main_menu/editor/: editor.cpp  editor.hpp
src/menu/: menu.cpp  menu.hpp  menu_broken.txt
src/step/: mode_game_over.cpp  mode_next_stage.cpp  mode_playing.cpp  mode_score_review.cpp  mode_title.cpp
tools/mod_server/: main.cpp
ui/menu/: menu.hpp  menu_binds.cpp  menu_internal.hpp  menu_navgraph.cpp  menu_navgraph.hpp  menu_step.cpp
(+43 files in other folders)
